--- a/.github/workflows/build-iso.yml
+++ b/.github/workflows/build-iso.yml
@@ -1,27 +1,43 @@
-name: Criar ISO a cada push
+name: create iso on push
 
 on:
   push:
     branches:
-      - main  
+      - main
 
 jobs:
-  criar-iso:
+  create-iso:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Fazer checkout do código
+    - name: checkout code
       uses: actions/checkout@v4
-
-    - name: Instalar genisoimage
+    
+    - name: install genisoimage
       run: sudo apt-get update && sudo apt-get install -y genisoimage
-
-    - name: Criar ISO da pasta 'FNAF5-PS2'
+    
+    - name: prepare iso content
       run: |
-        genisoimage -o FNAF5PS2.iso -R -J FNAF5-PS2
-
-    - name: Fazer upload do arquivo ISO
+        mkdir iso_temp
+        find . -maxdepth 1 -type f ! -name '*.md' ! -name '.gitignore' ! -name '*.yml' ! -name '*.yaml' ! -name 'FNAF6.elf' -exec cp {} iso_temp/ \;
+        for dir in */; do
+          if [[ "$dir" != ".git/" && "$dir" != ".github/" && "$dir" != "iso_temp/" ]]; then
+            cp -r "$dir" iso_temp/
+          fi
+        done
+        if [ -d "PS2DATA/DATA/ISOF" ]; then
+          cp -r PS2DATA/DATA/ISOF/* iso_temp/
+        fi
+        rm -rf iso_temp/.git
+        find iso_temp -type f | head -20
+    
+    - name: create iso
+      run: |
+        genisoimage -o FNAF5PS2.iso -R -J -V "FNAF5PS2" iso_temp/
+        ls -la FNAF5PS2.iso
+    
+    - name: upload iso artifact
       uses: actions/upload-artifact@v4
       with:
-        name: fnaf5
+        name: fnaf5-ps2-iso
         path: FNAF5PS2.iso
