--- a/.github/workflows/build-iso.yml
+++ b/.github/workflows/build-iso.yml
@@ -42,9 +42,18 @@ jobs:
         name: fnaf5-ps2-iso
         path: FNAF5PS2.iso
 
+    - name: Create Tag
+      run: |
+        git config user.name "github-actions"
+        git config user.email "github-actions@github.com"
+        git tag "v0.1"
+        git push origin "v0.1"
+
     - name: Create Release
       uses: softprops/action-gh-release@v2
       with:
+        tag_name: v0.1
+        name: "FNAF 5 v.0.1"
         files: FNAF5PS2.iso
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
